[package]
name = "vault-unseal"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "*", features = ["json"] }
serde_json = "*"
dotenv = "*"
serde = { version = "*", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
